--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Browser PWA</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="manifest" href="manifest.json">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Login Page</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div id="header">🌐 My Browser Logo</div>
-
-  <iframe id="browser" src="https://example.com"></iframe>
-
-  <div id="footer">
-    <button onclick="goBack()">⏪ Back</button>
-    <button onclick="goForward()">⏩ Forward</button>
-    <input type="text" id="urlInput" placeholder="Enter URL" />
-    <button onclick="goURL()">Go</button>
+  <div class="login-page">
+    <img src="assets/bg.jpg" alt="Background" class="bg-image">
+    <button id="loginBtn" class="btn3d login-btn">Login</button>
   </div>
 
-  <script src="script.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
