--- a/dashboard.html
+++ b/dashboard.html
@@ -37,10 +37,14 @@ const firebaseConfig = {
 firebase.initializeApp(firebaseConfig);
 const auth = firebase.auth();
 
+// Redirect to login if user not logged in
+auth.onAuthStateChanged(user => {
+  if(!user) window.location.href = 'index.html';
+});
+
 // Logout
-const logoutBtn = document.getElementById('logoutBtn');
-logoutBtn.addEventListener('click', () => {
-  auth.signOut().then(() => window.location.href = 'index.html');
+document.getElementById('logoutBtn').addEventListener('click', () => {
+  auth.signOut().then(() => window.location.href='index.html');
 });
 
 // Colorful buttons
@@ -57,7 +61,7 @@ function openCloudinaryUpload(){
   fileInput.onchange = () => {
     const file = fileInput.files[0];
     if(!file) return;
-    const cloudName = 'YOUR_CLOUD_NAME'; // Replace with your Cloud Name
+    const cloudName = 'YOUR_CLOUD_NAME'; // Replace with Cloudinary cloud name
     const unsignedUploadPreset = 'dlsqxs7zl';
     const url = `https://api.cloudinary.com/v1_1/${cloudName}/upload`;
     const formData = new FormData();
