--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 
+<!-- Fullscreen Background -->
 <img src="https://i.ibb.co/fVzDLVT6/Chat-GPT-Image-Dec-12-2025-01-07-19-PM.png" 
      alt="Background" class="bg-image">
 
-<!-- Centered Blinking Button -->
+<!-- Centered 3D Blinking Button -->
 <button id="loginBtn" class="btn3d blinking">Login with Google</button>
 
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
