--- a/index.html
+++ b/index.html
@@ -4,42 +4,109 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Login Page</title>
-<link rel="stylesheet" href="style.css">
+<style>
+  /* Fullscreen and center content */
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    font-family: Arial, sans-serif;
+  }
+
+  /* Background Image */
+  body::before {
+    content: "";
+    background-image: url('https://i.ibb.co/fVzDLVT6/Chat-GPT-Image-Dec-12-2025-01-07-19-PM.png');
+    background-size: cover;
+    background-position: center;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    z-index: -1;
+  }
+
+  /* 3D Blinking Button */
+  .btn3d {
+    padding: 20px 60px;
+    font-size: 22px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 12px;
+    color: #fff;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+    transition: all 0.2s ease;
+
+    /* 3D effect */
+    background: linear-gradient(145deg, #3498db, #2980b9);
+    box-shadow: 0 5px 0 #1c5980,
+                0 8px 15px rgba(0,0,0,0.4);
+  }
+
+  /* Press effect */
+  .btn3d:active {
+    transform: translateY(5px);
+    box-shadow: 0 2px 0 #1c5980,
+                0 4px 8px rgba(0,0,0,0.4);
+  }
+
+  /* Hover effect */
+  .btn3d:hover {
+    filter: brightness(1.2);
+  }
+
+  /* Blinking color animation */
+  @keyframes blinkColor {
+    0%   { background: linear-gradient(145deg, #3498db, #2980b9); }
+    25%  { background: linear-gradient(145deg, #e74c3c, #c0392b); }
+    50%  { background: linear-gradient(145deg, #2ecc71, #27ae60); }
+    75%  { background: linear-gradient(145deg, #f1c40f, #f39c12); }
+    100% { background: linear-gradient(145deg, #3498db, #2980b9); }
+  }
+
+  .blinking {
+    animation: blinkColor 2s infinite;
+  }
+</style>
 </head>
 <body>
 
-<!-- Fullscreen Background -->
-<img src="https://i.ibb.co/fVzDLVT6/Chat-GPT-Image-Dec-12-2025-01-07-19-PM.png" 
-     alt="Background" class="bg-image">
-
-<!-- Centered 3D Blinking Button -->
+<!-- Centered Button -->
 <button id="loginBtn" class="btn3d blinking">Login with Google</button>
 
+<!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
 
 <script>
-// Firebase config
-const firebaseConfig = {
-  apiKey: "AIzaSyD7x6epAwfshYNzc4G8JvmE4Bu3UNdMB5U",
-  authDomain: "nikah-c234b.firebaseapp.com",
-  databaseURL: "https://nikah-c234b-default-rtdb.firebaseio.com",
-  projectId: "nikah-c234b",
-  storageBucket: "nikah-c234b.appspot.com",
-  messagingSenderId: "760906560668",
-  appId: "1:760906560668:web:0a2c16a47aeaec26482959",
-  measurementId: "G-ENL0FZPEEF"
-};
-firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
+  // Firebase config
+  const firebaseConfig = {
+    apiKey: "AIzaSyD7x6epAwfshYNzc4G8JvmE4Bu3UNdMB5U",
+    authDomain: "nikah-c234b.firebaseapp.com",
+    databaseURL: "https://nikah-c234b-default-rtdb.firebaseio.com",
+    projectId: "nikah-c234b",
+    storageBucket: "nikah-c234b.appspot.com",
+    messagingSenderId: "760906560668",
+    appId: "1:760906560668:web:0a2c16a47aeaec26482959",
+    measurementId: "G-ENL0FZPEEF"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
 
-// Google Login
-document.getElementById('loginBtn').addEventListener('click', () => {
-  const provider = new firebase.auth.GoogleAuthProvider();
-  auth.signInWithPopup(provider)
-      .then(() => window.location.href='dashboard.html')
-      .catch(err => alert(err.message));
-});
+  // Google login
+  document.getElementById('loginBtn').addEventListener('click', () => {
+    const provider = new firebase.auth.GoogleAuthProvider();
+    auth.signInWithPopup(provider)
+        .then(() => window.location.href='dashboard.html')
+        .catch(err => alert(err.message));
+  });
 </script>
 
 </body>
