--- a/dashboard.html
+++ b/dashboard.html
@@ -14,18 +14,32 @@
 
 <!-- Main Buttons -->
 <div class="button-container">
-  <button class="btn3d color-btn" onclick="window.open('https://electoralsearch.eci.gov.in/', '_blank')">Election Search</button>
 
-  <button class="btn3d color-btn" onclick="window.open('https://mahasecvoterlist.in/ObjectionOnClick/SearchVoterName', '_blank')">Voter Name Search</button>
+  <button class="btn3d color-btn"
+    onclick="window.open('https://electoralsearch.eci.gov.in/', '_blank')">
+    Election Search
+  </button>
 
-  <button class="btn3d color-btn" onclick="openCloudinaryUpload()">Upload Image</button>
+  <button class="btn3d color-btn"
+    onclick="window.open('https://mahasecvoterlist.in/ObjectionOnClick/SearchVoterName', '_blank')">
+    Voter Name Search
+  </button>
 
-  <!-- Print → New Page With Buttons -->
-  <button class="btn3d blinking" onclick="openPrintWindow()">Print Page</button>
+  <button class="btn3d color-btn" onclick="openCloudinaryUpload()">
+    Upload Image
+  </button>
+
+  <!-- ⭐ FIXED: PRINT PAGE BUTTON NOW OPENS print.html -->
+  <button class="btn3d blinking" onclick="window.location.href='print.html'">
+    Print Page
+  </button>
+
 </div>
 
 <!-- Uploaded images -->
-<div id="images" style="margin-top:20px; display:flex; flex-wrap:wrap; gap:10px; justify-content:center;"></div>
+<div id="images"
+  style="margin-top:20px; display:flex; flex-wrap:wrap; gap:10px; justify-content:center;">
+</div>
 
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
@@ -47,36 +61,36 @@ const auth = firebase.auth();
 
 /* Check Login */
 auth.onAuthStateChanged(user => {
-  if(!user) window.location.href = 'index.html';
+  if (!user) window.location.href = 'index.html';
 });
 
 /* Logout */
 document.getElementById('logoutBtn').addEventListener('click', () => {
-  auth.signOut().then(() => window.location.href='index.html');
+  auth.signOut().then(() => window.location.href = 'index.html');
 });
 
 /* Cloudinary Upload */
-function openCloudinaryUpload(){
+function openCloudinaryUpload() {
   const fileInput = document.createElement('input');
   fileInput.type = 'file';
   fileInput.accept = 'image/*';
 
   fileInput.onchange = () => {
     const file = fileInput.files[0];
-    if(!file) return;
+    if (!file) return;
 
     const cloudName = 'YOUR_CLOUD_NAME';
     const unsignedUploadPreset = 'dlsqxs7zl';
     const url = `https://api.cloudinary.com/v1_1/${cloudName}/upload`;
-    const formData = new FormData();
 
+    const formData = new FormData();
     formData.append('file', file);
     formData.append('upload_preset', unsignedUploadPreset);
 
     fetch(url, { method: 'POST', body: formData })
       .then(res => res.json())
       .then(data => {
-        if(data.secure_url){
+        if (data.secure_url) {
           const imagesDiv = document.getElementById('images');
           const img = document.createElement('img');
           img.src = data.secure_url;
@@ -93,93 +107,6 @@ function openCloudinaryUpload(){
   };
 
   fileInput.click();
-}
-
-/* OPEN PRINT WINDOW WITH 4 BIG BUTTONS */
-function openPrintWindow(){
-  const win = window.open("", "_blank");
-
-  win.document.write(`
-    <html>
-    <head>
-      <title>Print Page</title>
-      <link rel="stylesheet" href="style.css">
-      <style>
-        body { display:flex; justify-content:center; align-items:center; height:100vh; }
-
-        /* SMALL LOGOUT BUTTON */
-        .print-logout {
-          position: fixed;
-          top: 15px;
-          right: 15px;
-          padding: 8px 16px;
-          font-size: 14px;
-          background: #ff4444;
-          color: #fff;
-          border: none;
-          border-radius: 8px;
-          box-shadow: 0 4px #a30000;
-          cursor: pointer;
-        }
-
-        .print-logout:active {
-          box-shadow: 0 2px #a30000;
-          transform: translateY(2px);
-        }
-
-        .big-btn {
-          width: 80%;
-          max-width: 350px;
-          padding: 18px;
-          font-size: 22px;
-          margin: 18px auto;
-          border: none;
-          border-radius: 14px;
-          color: white;
-          background: linear-gradient(#006eff, #0047b3);
-          box-shadow: 0 6px 0 #002d73;
-          display: block;
-          text-align: center;
-        }
-
-        .big-btn:active {
-          box-shadow: 0 2px 0 #002d73;
-          transform: translateY(4px);
-        }
-
-      </style>
-    </head>
-
-    <body class="dash-bg">
-
-      <button class="print-logout" onclick="window.close()">Logout</button>
-
-      <div style="width:100%; text-align:center; margin-top:40px;">
-
-        <button class="big-btn blinking"
-          onclick="window.open('https://mahasecvoterlist.in/ObjectionOnClick/SearchVoterName','_blank')">
-          Download
-        </button>
-
-        <button class="big-btn"
-          onclick="window.open('https://electoralsearch.eci.gov.in/','_blank')">
-          Election Search
-        </button>
-
-        <button class="big-btn"
-          onclick="window.location.href='pdf.html'">
-          WhatsApp Send
-        </button>
-
-        <button class="big-btn" onclick="window.print()">
-          Print
-        </button>
-
-      </div>
-
-    </body>
-    </html>
-  `);
 }
 </script>
 
